XXS Protection - Data Sanitization
According to task D, we have to sanitize the input before sending the data to our data base to avoid some characters that can be used for attacks. a function was created inside the validation.js and used inside the Post method.

--- a/public/form.html
+++ b/public/form.html
@@ -29,12 +29,12 @@
 
         <label for="eircode">Eircode:</label>
         <input type="text" id="eircode" name="eircode" required><br><br>
-        <div class="error" id="eircodeError"></div> 
+        <div class="error" id="eircodeError"></div>
 
         <input type="submit" value="Submit">
 
-
     </form>
+    <script src="validation.js"></script>
 
 </body>
 
