--- a/public/form.html
+++ b/public/form.html
@@ -35,7 +35,16 @@
         <input type="submit" value="Submit">
 
     </form>
-    
+
+    <hr>
+        <!-- Form to receive the file -->
+    <form id="submissionform" method="POST" action="/upload-csv" enctype="multipart/form-data">
+
+        <label for="file">Import your file:</label><br>
+        <input type="file" id="csvFile" name="csvFile"><br><br>
+
+        <input type="submit" value="Upload Data">
+    </form>
 
 </body>
 
