form-validation to Fix UX errors
Created a form-validation.js to fix the client side UX errors. Understand what the use is typing and check according with each input should get.

--- a/public/form.html
+++ b/public/form.html
@@ -5,40 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CA_2 Server Side</title>
-    <script src="validation.js"></script>
 </head>
 
 <body>
     <h1>CA-2 Server Side Programming</h1>
+    <div id="resultsMessage" style="margin-top: 20px; color: green; font-weight: bold;"></div>
     <form id="submissionform" method="POST" action="/submit-form">
 
         <label for="firstName">First Name:</label>
         <input type="text" id="firstName" name="first_name" required><br><br>
-        <!-- <div class="error" id="firstNameError"></div> -->
 
         <label for="SecondName">Second Name:</label>
         <input type="text" id="SecondName" name="second_name" required><br><br>
-        <!-- <div class="error" id="lastNameError"></div> -->
 
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
-        <!-- <div class="error" id="phoneNumberError"></div> -->
 
         <label for="phoneNumber">Phone Number:</label>
         <input type="text" id="phone" name="phone_number" required><br><br>
-        <!-- <div class="error" id="emailError"></div> -->
 
         <label for="eircode">Eircode:</label>
         <input type="text" id="eircode" name="eircode" required><br><br>
-        <!-- <div class="error" id="eircodeError"></div> -->
 
         <input type="submit" value="Submit">
 
     </form>
 
     <hr>
-        <!-- Form to receive the file -->
-    <form id="submissionform" method="POST" action="/upload-csv" enctype="multipart/form-data">
+    <!-- Form to receive the file -->
+    <form id="uploadform" method="POST" action="/upload-csv" enctype="multipart/form-data">
 
         <label for="file">Import your file:</label><br>
         <input type="file" id="csvFile" name="csvFile"><br><br>
@@ -46,6 +41,7 @@
         <input type="submit" value="Upload Data">
     </form>
 
+    <script src="form-validation.js"></script>
 </body>
 
 </html>
