--- a/public/form.html
+++ b/public/form.html
@@ -14,18 +14,23 @@
 
         <label for="firstName">First Name:</label>
         <input type="text" id="firstName" name="first_name" required><br><br>
+        <span class="error-message" id="error-first_name" style="color: red;"></span><br><br>
 
         <label for="SecondName">Second Name:</label>
         <input type="text" id="SecondName" name="second_name" required><br><br>
+        <span class="error-message" id="error-second_name" style="color: red;"></span><br><br>
 
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
+        <span class="error-message" id="error-email" style="color: red;"></span><br><br>
 
         <label for="phoneNumber">Phone Number:</label>
         <input type="text" id="phone" name="phone_number" required><br><br>
+        <span class="error-message" id="error-phone_number" style="color: red;"></span><br><br>
 
         <label for="eircode">Eircode:</label>
         <input type="text" id="eircode" name="eircode" required><br><br>
+        <span class="error-message" id="error-eircode" style="color: red;"></span><br><br>
 
         <input type="submit" value="Submit">
 
